fix input, add bbrp fungsi